[package]
name = "domain-fronting"
version = "0.1.0"
edition = "2024"
description = "Domain fronting client and server implementation for tunneling connections through HTTP POST requests"
keywords = ["domain-fronting", "networking"]
license = "GPL-3.0-or-later"
authors = ["Mullvad VPN"]
minimum-version = "1.85.1"
repository = "https://github.com/mullvad/domain-fronting"


[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.2"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
log = "0.4"
papaya = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["net", "io-util", "time", "macros", "sync", "rt-multi-thread", "fs"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Optional dependencies
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "tls12"], optional = true }
rustls-pki-types = { version = "1.0", optional = true }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "aws-lc-rs", "tls12"], optional = true }
clap = { version = "4.5", features = ["cargo", "derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
futures = { version = "0.3", optional = true }
[dev-dependencies]
tokio = { version = "1.42", features = ["test-util", "time"] }

[features]
default = []
tls = ["rustls", "rustls-pki-types", "tokio-rustls"]
examples = ["clap", "tracing-subscriber", "futures", "tls"]

[[bin]]
name = "domain_fronting"
required-features = ["examples"]

[[bin]]
name = "domain_fronting_server"
required-features = ["examples"]
